overflow bug fix try #1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@
   font-size: clamp(12px, 1.5vw, 16px);
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: scroll;
   scroll-behavior: smooth;
 }
 
